--- a/css/billy-joinville.css
+++ b/css/billy-joinville.css
@@ -7,7 +7,7 @@
 
 html, body {
     
-    font-family: -apple-system, BlinkMacSystemFont, sans-serif;
+    font-family: 'Roboto Slab', serif;
     background-color: aliceblue;
     color: #444;
     line-height: 1.6;
@@ -34,6 +34,63 @@ html, body {
 
     text-decoration: none;
 
+}
+
+nav {
+    position: fixed;
+    width: 100%;
+    top: 0;
+    z-index: 1000;
+    
+}
+
+.navbar {
+    width: 100%;
+    background: rgba(255, 255, 255, 0.1);
+    position: fixed; 
+    top: -5;
+    left: 0;
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    padding: 10px 10px;
+    box-shadow: 0 2px 4px rgba(0, 0, 0, 0.1);
+    z-index: 1000; 
+    margin: 0; 
+    margin-top: -5;
+}
+
+.navbar-nav {
+
+
+    display: flex;
+    justify-content: space-around;
+    width: 100%;
+    margin-top: -10px; 
+    font-weight: bold;
+    font-family:'Roboto Slab', serif;
+
+
+}
+
+.navbar a {
+    color: #ffffff;
+    text-decoration: none;
+    margin: 0 5px;
+    font-size: 1em;
+    transition: color 0.3s ease;
+    margin-top: -10px; 
+    border-radius: 30px; 
+
+}
+
+.navbar a:hover {
+    color: #000000; /* Change color on hover */
+}
+
+.navbar-brand img {
+    height: 70px; /* Adjust the height as needed */
+    margin-bottom: -5px; 
 }
 
 
@@ -96,7 +153,7 @@ header {
 }
 
 header h1 {
-        font-family: -apple-system, BlinkMacSystemFont, sans-serif;
+        font-family:'Roboto Slab', serif;
 
     font-size: 36px;
     text-align: center;
@@ -104,7 +161,8 @@ header h1 {
 
 
 header h2 {
-    font-family: -apple-system, BlinkMacSystemFont, sans-serif;
+
+    font-family: 'Roboto Slab', serif;
     font-size: 20px;
     text-align: center;
     font-weight: normal;
@@ -114,7 +172,7 @@ header h2 {
 }
 
 #header h2 {
-    font-family: -apple-system, BlinkMacSystemFont, sans-serif;
+    font-family: 'Roboto Slab', serif;
     font-size: 15px;
 }
 .portrait {
@@ -192,7 +250,7 @@ section:hover {
 }
 
 h2 {
-    font-family: -apple-system, BlinkMacSystemFont, sans-serif;
+    font-family: 'Roboto Slab', serif;
     font-size: 22px;
     font-weight: bold;
     margin-bottom: 15px;
@@ -200,7 +258,7 @@ h2 {
 }
 
 p {
-    font-family: -apple-system, BlinkMacSystemFont, sans-serif;
+    font-family: 'Roboto Slab', serif;
     font-size: 16px;
     color: #555;
     line-height: 1.5;
@@ -210,7 +268,7 @@ p {
 
 header p {
 
-    font-family: -apple-system, BlinkMacSystemFont, sans-serif;
+    font-family:'Roboto Slab', serif;
     font-size: 20px;
     color: #555;
     text-align: center;
@@ -728,7 +786,7 @@ ol li {
 }
 
 .terms-container h2, .terms-container h3 {
-    font-family: 'Lato', sans-serif;
+    font-family: 'Roboto Slab', serif;
     font-size: 24px;
     color: #333;
     margin-top: 20px;
