--- a/css/billy-joinville.css
+++ b/css/billy-joinville.css
@@ -7,7 +7,7 @@
 
 html, body {
     
-    font-family: 'Roboto Slab', serif;
+    font-family: 'Inter', sans-serif;
     background-color: aliceblue;
     color: #444;
     line-height: 1.6;
@@ -68,7 +68,7 @@ nav {
     width: 100%;
     margin-top: -10px; 
     font-weight: bold;
-    font-family:'Roboto Slab', serif;
+    font-family:'Inter', sans-serif;
 
 
 }
@@ -153,7 +153,7 @@ header {
 }
 
 header h1 {
-        font-family:'Roboto Slab', serif;
+        font-family: 'Inter', sans-serif;
 
     font-size: 36px;
     text-align: center;
@@ -162,7 +162,7 @@ header h1 {
 
 header h2 {
 
-    font-family: 'Roboto Slab', serif;
+    font-family: 'Inter', sans-serif;
     font-size: 20px;
     text-align: center;
     font-weight: normal;
@@ -172,7 +172,7 @@ header h2 {
 }
 
 #header h2 {
-    font-family: 'Roboto Slab', serif;
+    font-family:'Inter', sans-serif;
     font-size: 15px;
 }
 .portrait {
@@ -250,7 +250,7 @@ section:hover {
 }
 
 h2 {
-    font-family: 'Roboto Slab', serif;
+    font-family: 'Inter', sans-serif;
     font-size: 22px;
     font-weight: bold;
     margin-bottom: 15px;
@@ -258,7 +258,8 @@ h2 {
 }
 
 p {
-    font-family: 'Roboto Slab', serif;
+    font-family: 'Inter', sans-serif;
+
     font-size: 16px;
     color: #555;
     line-height: 1.5;
@@ -268,7 +269,7 @@ p {
 
 header p {
 
-    font-family:'Roboto Slab', serif;
+    font-family:'Inter', sans-serif;
     font-size: 20px;
     color: #555;
     text-align: center;
@@ -786,7 +787,8 @@ ol li {
 }
 
 .terms-container h2, .terms-container h3 {
-    font-family: 'Roboto Slab', serif;
+    font-family: 'Inter', sans-serif;
+
     font-size: 24px;
     color: #333;
     margin-top: 20px;
