--- a/css/billy-joinville.css
+++ b/css/billy-joinville.css
@@ -41,6 +41,7 @@ nav {
     width: 100%;
     top: 0;
     z-index: 1000;
+    background-color: white;
     
 }
 
@@ -58,6 +59,7 @@ nav {
     z-index: 1000; 
     margin: 0; 
     margin-top: -5;
+    color: white !important;
 }
 
 .navbar-nav {
