--- a/css/billy-joinville.css
+++ b/css/billy-joinville.css
@@ -7,7 +7,7 @@
 
 html, body {
     
-    font-family: 'Inter', sans-serif;
+    font-family:  'Poppins', sans-serif;
     background-color: aliceblue;
     color: #444;
     line-height: 1.6;
@@ -70,7 +70,8 @@ nav {
     width: 100%;
     margin-top: -10px; 
     font-weight: bold;
-    font-family:'Inter', sans-serif;
+    font-family: 'Poppins', sans-serif;
+
 
 
 }
@@ -155,7 +156,8 @@ header {
 }
 
 header h1 {
-        font-family: 'Inter', sans-serif;
+        font-family:  'Poppins', sans-serif;
+
 
     font-size: 36px;
     text-align: center;
@@ -164,7 +166,8 @@ header h1 {
 
 header h2 {
 
-    font-family: 'Inter', sans-serif;
+    font-family: 'Poppins', sans-serif;
+
     font-size: 20px;
     text-align: center;
     font-weight: normal;
@@ -174,7 +177,8 @@ header h2 {
 }
 
 #header h2 {
-    font-family:'Inter', sans-serif;
+    font-family: 'Poppins', sans-serif;
+
     font-size: 15px;
 }
 .portrait {
@@ -252,7 +256,8 @@ section:hover {
 }
 
 h2 {
-    font-family: 'Inter', sans-serif;
+    font-family:  'Poppins', sans-serif;
+
     font-size: 22px;
     font-weight: bold;
     margin-bottom: 15px;
@@ -260,18 +265,21 @@ h2 {
 }
 
 p {
-    font-family: 'Inter', sans-serif;
+    font-family:  'Poppins', sans-serif;
+
 
     font-size: 16px;
     color: #555;
     line-height: 1.5;
     margin-bottom: 20px;
     text-align: left;
+    font-weight: 300; 
 }
 
 header p {
 
-    font-family:'Inter', sans-serif;
+    font-family: 'Poppins', sans-serif;
+
     font-size: 20px;
     color: #555;
     text-align: center;
@@ -789,7 +797,8 @@ ol li {
 }
 
 .terms-container h2, .terms-container h3 {
-    font-family: 'Inter', sans-serif;
+    font-family:  'Poppins', sans-serif;
+
 
     font-size: 24px;
     color: #333;
