--- a/css/billy-joinville.css
+++ b/css/billy-joinville.css
@@ -273,7 +273,7 @@ p {
     line-height: 1.5;
     margin-bottom: 20px;
     text-align: left;
-    font-weight: 300; 
+    font-weight: 300 !important;
 }
 
 header p {
@@ -284,6 +284,7 @@ header p {
     color: #555;
     text-align: center;
     max-width: 600px;
+    font-weight: 300 !important;
 }
 
 
