--- a/css/billy-joinville.css
+++ b/css/billy-joinville.css
@@ -1099,14 +1099,20 @@ footer.page-website-setup-footer {
   }
   
   .footer-col a:hover {
-    color: #FFD700;
-    text-decoration: underline overline;
+    color: #000000 !important;
+    font-weight: lighter;
+    animation: normalize 0.3s ease-in-out;
   }
   
   .social-icons a {
     margin-right: 12px;
     font-size: 18px;
     color: white;
+  }
+
+  .social-icons a:hover {
+    color: #000000 !important;
+    animation: normalize 0.3s ease-in-out;
   }
   
   .footer-bottom {
