Changed padding and revamped portal

--- a/css/billy-joinville.css
+++ b/css/billy-joinville.css
@@ -5,6 +5,11 @@
     box-sizing: border-box;
 }
 
+#header-services {
+
+    padding-top: 100px !important;
+}
+
 html, body {
     
     font-family:  'Poppins', sans-serif;
