--- a/css/billy-joinville.css
+++ b/css/billy-joinville.css
@@ -1253,4 +1253,8 @@ footer.page-website-setup-footer {
     box-shadow: 0 4px 15px rgba(0,0,0,0.2);
     align-items: center !important;
   }
+
+  .contact-form-container {
+    padding: 30px;
+  }
   
